## SET AUTOMOC ON FOR UI FILES AND HEADER FILES
#set(CMAKE_AUTOMOC ON)
#set(CMAKE_AUTOUIC ON)
## ADDITIONAL PATHS TO  BE SEARCH FOR UI FILES
#
## find Qt5 and required components | Qt5_DIR
#find_package(Qt5 COMPONENTS Widgets Network Sql REQUIRED)
#
## EXEQTABLE
##add_executable(Bsf
##        mainwindow.ui
##        mainwindow.cpp
##        main.cpp
##        )
##
##target_link_libraries(Bsf
##        Qt5::Widgets
##        Qt5::Network
##        Qt5::Sql
##)
